    - Secondary entity categories can be toggled individually: electrical infrastructure, other production entities, defense structures, space platform assets, and miscellaneous items
    - Standalone entity types (labs, roboports, beacons, pumps, radar, inserters) have individual toggle controls for granular customization
  Ease of use:
    - Comprehensive tooltips explain which specific entity types are included in each category
---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 09. 08. 2025
  Features:
    - Modules now automatically upgrade to match entity quality during quality changes
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 07. 08. 2025
  Features:
    - Expanded tracked entity types to include Space Age content
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 04. 08. 2025
  Features:
    - Split notifications into two independently configurable types:
      - Aggregate console alerts showing summary of all changes per tick
      - Individual entity map ping alerts for each quality change
    - Enhanced stability with automatic storage reinitialization
    - Added entity validation and error recovery mechanisms
  Optimizations:
    - Reduced memory overhead and improved predictability of entity tracking
    - Refactored entity type checking to improve maintainability
  Bugfixes:
    - Improved handling of invalid entities during quality checks
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 03. 08. 2025
  Features:
    - Apply quality changes to random secondary entities
    - Expanded entity tracking to include more placeable types (except belts, pipes, and tiles as they impacted performance too much)