@@ -10,6 +10,7 @@ manufacturing-hours-for-change=Manufacturing Hours for Change
 percentage-chance-of-change=Percentage Chance of Change
 quality-increase-cost=Increase Cost per Quality Level
 quality-chance-accumulation-rate=Quality Chance Accumulation Rate
+upgrade-modules-with-entity=Upgrade Modules with Entity
 upgrade-check-frequency-seconds=Upgrade Check Frequency (seconds)
 quality-change-aggregate-alerts-enabled=Aggregate Console Alerts
 quality-change-entity-alerts-enabled=Entity Map Ping Alerts
@@ -32,6 +33,7 @@ manufacturing-hours-for-change=The number of manufacturing hours after which a q
 percentage-chance-of-change=The percentage chance that a quality change will occur after the manufacturing hours are met.\nMin value 0.0001%, Max value 100% (always change after the time is passed)
 quality-increase-cost=Increases the cost of changes per level of quality. The cost compounds at each level. The formula is: Base Hours × (1 + modifier)^quality_level. Level 0 (Normal) is never modified.\n\n[color=yellow]Examples with 5 'Manufacturing Hours for Change':[/color]\n\n[color=white]Modifier: 0.0 (no increase)[/color]\n  Normal (Lvl 0): 5.0 Hours\n  Uncommon (Lvl 1): 5.0 Hours\n  Rare (Lvl 2): 5.0 Hours\n\n[color=white]Modifier: 0.3 (30% compound increase)[/color]\n  Normal (Lvl 0): 5.0 Hours\n  Uncommon (Lvl 1): 6.5 Hours\n  Rare (Lvl 2): 8.5 Hours\n\n[color=white]Modifier: 1.0 (100% compound increase)[/color]\n  Normal (Lvl 0): 5.0 Hours\n  Uncommon (Lvl 1): 10.0 Hours\n  Rare (Lvl 2): 20.0 Hours
 quality-chance-accumulation-rate=Controls how much the change chance increases after each failed attempt.\n\n[color=white]None (Default):[/color] No accumulation - chance stays constant.\n\n[color=white]Low (20%):[/color] Chance increases by 20% of base rate each failure.\n\n[color=white]Medium (50%):[/color] Chance increases by 50% of base rate each failure.\n\n[color=white]High (100%):[/color] Chance increases by 100% of base rate each failure.\n\n[color=yellow]Example with 1% base chance:[/color]\n\n[color=white]Low:[/color] 1.0% → 1.2% → 1.4% → 1.6%...\n[color=white]High:[/color] 1.0% → 2.0% → 3.0% → 4.0%...\n\nAll accumulation settings eventually guarantee quality changes - higher settings just reach 100% chance faster.
+upgrade-modules-with-entity=When enabled, modules inside an entity will also change when that entity's quality is updated. Modules with lower quality than the new entity quality are upgraded for free, which can provide substantial production bonuses and may impact game balance. Defaults to OFF.
 upgrade-check-frequency-seconds=How often to check all machines for quality upgrades in seconds.\nMin value 1 second, Max value 3600 seconds (60 minutes).\nLower values check more frequently but may impact performance.
 quality-change-aggregate-alerts-enabled=Show console messages summarizing all quality changes made during a tick. Example: "3 assembly machines upgraded, 1 inserter downgraded"
 quality-change-entity-alerts-enabled=Show map ping alerts on individual entities when their quality changes. Click the alert to view the upgraded entity.
